Support adding new columns

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -63,9 +63,9 @@
 {% block tail %}
 {% if form_errors %}
 <script type="text/javascript">
-  $('#newRowModal').removeClass('fade')
-  $('#newRowModal').modal('show');
-  $('#newRowModal').addClass('fade')
+  $('#newTableModal').removeClass('fade')
+  $('#newTableModal').modal('show');
+  $('#newTableModal').addClass('fade')
 </script>
 {% endif %}
 {% endblock %}
