--- a/templates/detail.html
+++ b/templates/detail.html
@@ -8,7 +8,7 @@
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
           <li class="breadcrumb-item"><a href="{{ table_url }}">{{ table_name }}</a></li>
-          <li class="breadcrumb-item active">{{ item }}</li>
+          <li class="breadcrumb-item active">{{ item.uuid }}</li>
         </ol>
       </nav>
     </div>
