--- a/templates/columns.html
+++ b/templates/columns.html
@@ -67,11 +67,11 @@
           <div class="form-group row">
             <label class="col-sm-3 col-form-label">Data Type</label>
             <div class="col-sm-9">
-              <select name="datatype" class="custom-select {% if form_errors.name %}is-invalid{% endif %}">
-                <option value="string">string</option>
-                <option value="integer">integer</option>
+              <select name="datatype" class="custom-select {% if form_errors.datatype %}is-invalid{% endif %}">
+                <option value="string" {% if form_values.datatype == 'string' %}selected{% endif %}>string</option>
+                <option value="integer" {% if form_values.datatype == 'integer' %}selected{% endif %}>integer</option>
               </select>
-               {% if form_errors.name %}<div class="invalid-feedback">{{ form_errors.name }}</div>{% endif %}
+               {% if form_errors.datatype %}<div class="invalid-feedback">{{ form_errors.datatype }}</div>{% endif %}
             </div>
           </div>
         </div>
@@ -87,9 +87,9 @@
 {% block tail %}
 {% if form_errors %}
 <script type="text/javascript">
-  $('#newRowModal').removeClass('fade')
-  $('#newRowModal').modal('show');
-  $('#newRowModal').addClass('fade')
+  $('#newColumnModal').removeClass('fade')
+  $('#newColumnModal').modal('show');
+  $('#newColumnModal').addClass('fade')
 </script>
 {% endif %}
 {% endblock %}
