Support adding new columns

--- a/templates/table.html
+++ b/templates/table.html
@@ -51,7 +51,7 @@
                   {% endif %}
                 </th>
                 {% endfor %}
-                <th></th>
+                <th style="width: 20px"></th>
               </tr>
             </thead>
             <tbody>
