--- a/templates/detail.html
+++ b/templates/detail.html
@@ -53,7 +53,7 @@
       </div>
       <div class="modal-footer">
         <form action="{{ item.delete_url }}" method="POST">
-          <button type="submit" class="btn btn-outline-danger"><span class="oi oi-x" title="icon name" aria-hidden="true"></span> Confirm Delete</button>
+          <button type="submit" class="btn btn-outline-danger"><span class="oi oi-x" title="details" aria-hidden="true"></span> Confirm Delete</button>
         </form>
       </div>
     </div>
