--- a/templates/base.html
+++ b/templates/base.html
@@ -10,12 +10,14 @@
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', path='/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', path='/css/bootstrap-fileinput.min.css') }}" rel="stylesheet">
 
     <!-- Iconic icons CSS -->
     <link href="{{ url_for('static', path='/css/open-iconic-bootstrap.min.css') }}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="{{ url_for('static', path='/css/jumbotron.css') }}" rel="stylesheet">
+
   </head>
 
   <body>
@@ -40,6 +42,8 @@
     <script src="{{ url_for('static', path='/js/jquery-3.3.1.slim.min.js') }}"></script>
     <script src="{{ url_for('static', path='/js/popper.min.js') }}"></script>
     <script src="{{ url_for('static', path='/js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', path='/js/bootstrap-fileinput.min.js') }}"></script>
+
     {% block tail %}{% endblock %}
 
   </body>
