Only show 'upload CSV' for undefined tables

--- a/templates/table.html
+++ b/templates/table.html
@@ -84,7 +84,8 @@
       <div class="row pt-3">
         <div class="col-md-12">
           <div class="alert alert-warning" role="alert" style="text-align: center; padding: 30px;">
-          <em>This table does not have any columns yet.</em>
+          <p><em>This table does not have any columns defined yet.</em></p>
+          <p><em>Upload a CSV file, or edit the columns and start adding data.</em></p>
           </div>
         </div>
       </div>
@@ -98,9 +99,11 @@
         </div>
     {% endif %}
 
+    {% if not table_has_columns %}
     <form id="uploadForm" action="{{ url_for('upload', table_id=table_id) }}" method="POST" enctype="multipart/form-data">
-      <input id="input-b1" name="upload-file" type="file" class="file">
+      <input id="uploadInput" name="upload-file" type="file" class="file">
     </form>
+    {% endif %}
   </div>
 </main>
 
@@ -136,7 +139,7 @@
 
 {% block tail %}
 <script type="text/javascript">
-$("#input-b1").fileinput({
+$("#uploadInput").fileinput({
     msgPlaceholder: "Select a CSV file...",
     showUpload: false, // hide upload button
     showRemove: false, // hide remove button
