--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,19 +3,25 @@
 {% block content %}
 <main role="main">
   <div class="container">
-    <div class="row pt-3">
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item active">Dashboard</li>
-        </ol>
-      </nav>
-    </div>
 
-    <div class="row">
-      <div class="col-md-12">
-        <div style="float: right">
-        <button class="btn btn-outline-primary" type="button" id="buttonNewTable" data-toggle="modal" data-target="#newTableModal"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> New Table</button>
-      </div>
+
+    <div class="row" style="padding: 60px 0">
+      <div class="col-md-12" style="text-align: center">
+        <h3>Welcome to Starlette!</h3>
+        {% if request.session.username %}
+        <div>
+            <span>You can view all existing tables here, or <a href="{{ url_for('profile', username=request.session.username) }}">start creating your own tables</a>.</span>
+        </div>
+        {% else %}
+        <div>
+            <span>You can view all existing tables here, or login and start creating your own data sets.</span>
+            <form class="pt-3" action="{{ url_for('auth:login') }}", method="POST">
+              <button class="btn btn-outline-dark" type="submit">Login using GitHub</button>
+            </form>
+        </div>
+        {% endif %}
+        <!-- <div style="float: right">
+        <button class="btn btn-outline-primary" type="button" id="buttonNewTable" data-toggle="modal" data-target="#newTableModal"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> New Table</button> -->
       </div>
     </div>
 
@@ -23,7 +29,13 @@
       <div class="col-md-12">
         <ul class="list-group">
           {% for row in rows %}
-          <li class="list-group-item d-flex justify-content-between align-items-center"><a href="{{ row.url }}">{{ row.text }}</a> <span class="badge badge-primary badge-pill">{{ "{:,}".format(row.count) }}</span></li>
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span>
+                <a href="{{ url_for('profile', username=row.owner )}}">{{ row.owner }}</a> /
+                <a href="{{ row.url }}">{{ row.text }}</a>
+              </span>
+              <span class="badge badge-primary badge-pill">{{ "{:,}".format(row.count) }}</span>
+          </li>
           {% endfor %}
         </ul>
       </div>
