--- a/templates/table.html
+++ b/templates/table.html
@@ -6,7 +6,11 @@
     <div class="row pt-3">
       <nav>
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+          {% if owner %}
+            <li class="breadcrumb-item"><a href="{{ url_for('profile', username=owner) }}">{{ owner }}</a></li>
+          {% else %}
+            <li class="breadcrumb-item"><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+          {% endif %}
           <li class="breadcrumb-item active">{{ table_name }}</li>
         </ol>
       </nav>
