--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,19 +3,25 @@
 {% block content %}
 <main role="main">
   <div class="container">
-    <div class="row pt-3">
-      <nav>
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item active">Dashboard</li>
-        </ol>
-      </nav>
-    </div>
 
-    <div class="row">
-      <div class="col-md-12">
-        <div style="float: right">
-        <button class="btn btn-outline-primary" type="button" id="buttonNewTable" data-toggle="modal" data-target="#newTableModal"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> New Table</button>
-      </div>
+
+    <div class="row" style="padding: 60px 0">
+      <div class="col-md-12" style="text-align: center">
+        <h3>Welcome to Starlette!</h3>
+        {% if request.session.username %}
+        <div>
+            <span>You can view all existing tables here, or <a href="{{ url_for('profile', username=request.session.username) }}">start creating your own tables</a>.</span>
+        </div>
+        {% else %}
+        <div>
+            <span>You can view all existing tables here, or login and start creating your own data sets.</span>
+            <form class="pt-3" action="{{ url_for('auth:login') }}", method="POST">
+              <button class="btn btn-outline-dark" type="submit">Login using GitHub</button>
+            </form>
+        </div>
+        {% endif %}
+        <!-- <div style="float: right">
+        <button class="btn btn-outline-primary" type="button" id="buttonNewTable" data-toggle="modal" data-target="#newTableModal"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> New Table</button> -->
       </div>
     </div>
 
@@ -23,49 +29,17 @@
       <div class="col-md-12">
         <ul class="list-group">
           {% for row in rows %}
-          <li class="list-group-item d-flex justify-content-between align-items-center"><a href="{{ row.url }}">{{ row.text }}</a> <span class="badge badge-primary badge-pill">{{ "{:,}".format(row.count) }}</span></li>
+          <li class="list-group-item d-flex justify-content-between align-items-center">
+              <span>
+                <a href="{{ url_for('profile', username=row.owner )}}">{{ row.owner }}</a> /
+                <a href="{{ row.url }}">{{ row.text }}</a>
+              </span>
+              <span class="badge badge-primary badge-pill">{{ "{:,}".format(row.count) }}</span>
+          </li>
           {% endfor %}
         </ul>
       </div>
     </div>
   </div>
 </main>
-
-
-<div class="modal fade" id="newTableModal" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">New Table</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <form action="{{ request.url }}" method="POST">
-        <div class="modal-body">
-          <div class="form-group row">
-            <label class="col-sm-3 col-form-label">Name</label>
-            <div class="col-sm-9">
-              <input type="text" name="name" class="form-control {% if form_errors.name %}is-invalid{% endif %}" value="{{ form_values.name }}">
-               {% if form_errors.name %}<div class="invalid-feedback">{{ form_errors.name }}</div>{% endif %}
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-outline-primary"><span class="oi oi-check" title="icon name" aria-hidden="true"></span> Save Changes</button>
-        </div>
-      </form>
-    </div>
-  </div>
-</div>
-{% endblock %}
-
-{% block tail %}
-{% if form_errors %}
-<script type="text/javascript">
-  $('#newTableModal').removeClass('fade')
-  $('#newTableModal').modal('show');
-  $('#newTableModal').addClass('fade')
-</script>
-{% endif %}
 {% endblock %}
