--- a/templates/detail.html
+++ b/templates/detail.html
@@ -17,6 +17,7 @@
       </nav>
     </div>
 
+    {% if can_edit %}
     <div class="row">
       <div class="col-md-12">
         <div style="float: right">
@@ -26,6 +27,7 @@
       </div>
       </div>
     </div>
+    {% endif %}
 
     <div class="row pt-3">
       <div class="col-md-12">
