--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,6 +11,7 @@
       </div>
       <div class="col-md-9">
 
+        {% if can_edit %}
         <div class="row">
           <div class="col-md-12">
             <div style="float: right">
@@ -18,6 +19,7 @@
           </div>
           </div>
         </div>
+        {% endif %}
 
         <div class="row pt-3">
           <div class="col-md-12">
@@ -38,7 +40,7 @@
   </div>
 </main>
 
-
+{% if can_edit %}
 <div class="modal fade" id="newTableModal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -65,6 +67,8 @@
     </div>
   </div>
 </div>
+{% endif %}
+
 {% endblock %}
 
 {% block tail %}
