--- a/templates/table.html
+++ b/templates/table.html
@@ -30,12 +30,14 @@
           {% endif %}
       </div>
       <div class="col-md-6">
-        <div style="float: right">
-        <a class="btn btn-outline-secondary" id="buttonEditColumns" href="{{ url_for('columns', username=owner, table_id=table_id) }}"><span class="oi oi-pencil" title="icon name" aria-hidden="true"></span> Edit Columns</a>
-        {% if table_has_columns %}
-        <button class="btn btn-outline-primary" type="button" id="buttonNewRow" data-toggle="modal" data-target="#newRowModal"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> New Row</button>
+        {% if can_edit %}
+          <div style="float: right">
+          <a class="btn btn-outline-secondary" id="buttonEditColumns" href="{{ url_for('columns', username=owner, table_id=table_id) }}"><span class="oi oi-pencil" title="icon name" aria-hidden="true"></span> Edit Columns</a>
+          {% if table_has_columns %}
+          <button class="btn btn-outline-primary" type="button" id="buttonNewRow" data-toggle="modal" data-target="#newRowModal"><span class="oi oi-plus" title="icon name" aria-hidden="true"></span> New Row</button>
+          {% endif %}
+          </div>
         {% endif %}
-      </div>
       </div>
     </div>
     {% if table_has_columns and table_has_rows %}
@@ -89,7 +91,7 @@
         <div class="col-md-12">
           <div class="alert alert-warning" role="alert" style="text-align: center; padding: 30px;">
           <p><em>This table does not have any columns defined yet.</em></p>
-          <p><em>Upload a CSV file, or edit the columns and start adding data.</em></p>
+          {% if can_edit %}<p><em>Upload a CSV file, or edit the columns and start adding data.</em></p>{% endif %}
           </div>
         </div>
       </div>
@@ -103,7 +105,7 @@
         </div>
     {% endif %}
 
-    {% if not table_has_columns %}
+    {% if not table_has_columns and can_edit %}
     <form id="uploadForm" action="{{ url_for('upload', username=owner, table_id=table_id) }}" method="POST" enctype="multipart/form-data">
       <input id="uploadInput" name="upload-file" type="file" class="file">
     </form>
