--- a/templates/table.html
+++ b/templates/table.html
@@ -41,14 +41,25 @@
       </div>
     </div>
     {% if table_has_columns and table_has_rows %}
+
     <div class="row">
       <div class="col-md-12">
+        <div class="dropdown" style="float: right; padding-bottom: 3px; border-left: 0; border-bottom: 1px solid #dee2e6">
+          <button class="btn btn-link dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Export
+          </button>
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="{{ request.url.include_query_params(export='json') }}">Export JSON</a>
+            <a class="dropdown-item" href="{{ request.url.include_query_params(export='csv') }}">Export CSV</a>
+          </div>
+        </div>
+
         <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a {% if view_style == 'table' %}class="nav-link active"{% else %}class="nav-link" href="{{ request.url.remove_query_params('view') }}"{% endif %}>Tabular view</a>
+          <a {% if view_style == 'table' %}class="nav-link active"{% else %}class="nav-link" href="{{ request.url.remove_query_params('view') }}"{% endif %}>Table</a>
         </li>
         <li class="nav-item">
-          <a {% if view_style == 'json' %}class="nav-link active"{% else %}class="nav-link" href="{{ request.url.include_query_params(view='json') }}"{% endif %}>JSON view</a>
+          <a {% if view_style == 'json' %}class="nav-link active"{% else %}class="nav-link" href="{{ request.url.include_query_params(view='json') }}"{% endif %}>JSON</a>
         </li>
       </ul>
     </div>
