--- a/templates/table.html
+++ b/templates/table.html
@@ -29,7 +29,7 @@
           </form>
           {% endif %}
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6" style="height: 54px">
         {% if can_edit %}
           <div style="float: right">
           <a class="btn btn-outline-secondary" id="buttonEditColumns" href="{{ url_for('columns', username=owner, table_id=table_id) }}"><span class="oi oi-pencil" title="icon name" aria-hidden="true"></span> Edit Columns</a>
