--- a/templates/base.html
+++ b/templates/base.html
@@ -15,8 +15,8 @@
     <!-- Iconic icons CSS -->
     <link href="{{ url_for('static', path='/css/open-iconic-bootstrap.min.css') }}" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', path='/css/jumbotron.css') }}" rel="stylesheet">
+    <!-- Custom styles for the site -->
+    <link href="{{ url_for('static', path='/css/base.css') }}" rel="stylesheet">
 
   </head>
 
