--- a/templates/detail.html
+++ b/templates/detail.html
@@ -31,15 +31,31 @@
 
     <div class="row pt-3">
       <div class="col-md-12">
-        <table class="table">
-          <tbody>
-            {% for key, field in schema.fields.items() %}
-            <tr>
-              <th>{{ field.title }}</th><td>{{ item[key] }}</td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
+        <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <a {% if view_style == 'table' %}class="nav-link active"{% else %}class="nav-link" href="{{ request.url.remove_query_params('view') }}"{% endif %}>Table</a>
+        </li>
+        <li class="nav-item">
+          <a {% if view_style == 'json' %}class="nav-link active"{% else %}class="nav-link" href="{{ request.url.include_query_params(view='json') }}"{% endif %}>JSON</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+    <div class="row">
+      <div class="col-md-12">
+        {% if view_style == "table" %}
+          <table class="table dataset-detail">
+            <tbody>
+              {% for key, field in schema.fields.items() %}
+              <tr>
+                <th>{{ field.title }}</th><td>{{ item[key] }}</td>
+              </tr>
+              {% endfor %}
+            </tbody>
+          </table>
+        {% else %}
+          <pre style="padding: 20px; font-size: 12px">{{ json_data }}</pre>
+        {% endif %}
       </div>
     </div>
   </div>
