Align breadcrumbs properly

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -4,6 +4,7 @@
 <main role="main">
   <div class="container">
     <div class="row pt-3">
+      <div style="padding: 0 15px">
       <nav>
         <ol class="breadcrumb">
           {% if owner %}
@@ -15,6 +16,7 @@
           <li class="breadcrumb-item active">{{ item.uuid }}</li>
         </ol>
       </nav>
+      </div>
     </div>
 
     {% if can_edit %}
