--- a/templates/table.html
+++ b/templates/table.html
@@ -4,6 +4,7 @@
 <main role="main">
   <div class="container">
     <div class="row pt-3">
+      <div style="padding: 0 15px">
       <nav>
         <ol class="breadcrumb">
           {% if owner %}
@@ -14,6 +15,7 @@
           <li class="breadcrumb-item active">{{ table_name }}</li>
         </ol>
       </nav>
+      </div>
     </div>
 
     <div class="row">
